--- a/package.json
+++ b/package.json
@@ -3,13 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/input": "^1.2.10",
+    "@chakra-ui/react": "^1.6.6",
+    "@choc-ui/chakra-autocomplete": "^4.5.8",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@hookform/resolvers": "^2.8.0",
+    "@rpldy/upload-preview": "^0.13.3",
+    "@rpldy/uploady": "^0.13.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "axios": "^0.21.1",
+    "chakra-ui-autocomplete": "^1.4.3",
+    "file-upload-with-preview": "^4.1.0",
+    "framer-motion": "^4",
+    "react": "^16.13.0",
+    "react-categorized-tag-input": "^2.1.2",
+    "react-dnd": "^14.0.3",
+    "react-dom": "^16.13.0",
+    "react-hook-form": "^7.12.2",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-select": "^4.3.1",
+    "react-tag-autocomplete": "^6.2.0",
+    "react-tag-input-custom-search": "^5.9.26",
+    "sweetalert2": "^11.1.4",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.2",
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
